# ShadowCheck

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  temp
config/: __init__.py  config.yaml  loader.py  logger_config.py  models.py
core/detection/: yolo_detector.py
core/ocr/: paddle_ocr_wrapper.py
core/pipeline/: frame_handler.py  video_processor.py
core/tracking/: simple_tracker.py
core/utils/: timing.py
database/: db_manager.py  models.py
tests/: test_ocr.py  test_tracking.py
