[project]
name = "shadowcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boxmot>=16.0.11",
    "humanfriendly>=10.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.0",
    "sqlalchemy>=2.0.48",
    "ultralytics>=8.4.16",
]
